--- a/app/assets/stylesheets/store/products.css
+++ b/app/assets/stylesheets/store/products.css
@@ -21,7 +21,14 @@
     position: relative;
 }
 .product-image a {
-    min-height: 100px;
+    /*min-height: 100px;*/
+    width: 100%;
+    height: 100px;
+}
+.product-image a {
+    max-height: 100px;
+    width: auto;
+    height: auto;
 }
 #product-variants [type=radio]{
     display: none;
